--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <input type="button" id="buttonId" class="buttonclass" value="." onclick="input(this.value)">
             </div>
             <div class="column">
-                <input type="button" id="buttonId" class="buttonclass" value="+/-" onclick="input(this.value)">
+                <input type="button" id="buttonId" class="buttonclass" value="i" onclick="input(this.value)">
             </div>
             <div class="column">
                 <input type="button" id="buttonId" class="buttonclass" value="=" onclick="input(this.value)">   
